# article-018-magic-enum

./: CMakeLists.txt  enum-magic.cpp  enum-non-magic.cpp
